# phonotext-Qt

./: .gitignore  CMakeLists.txt  debug.txt  phonotry.cpp  questions.txt  tolower.py
data/: in1.txt  json.json  out.txt  outJson.json  tmpppp.txt
engine/: conf.cpp  conf.h  letter.cpp  letter.h  phonotext.cpp  phonotext.h  proccessing.cpp  proccessing.h
lng json/: latin.json
lng yaml/: russian.yaml
lng_json/: russian.json
res/data/: in.txt  in1.txt  in2.txt  out.txt  outJson.json  prnst_onegin.txt  prnst_saltan.txt  saltan.txt
res/lng_conf/: english.json
src/: conf.cpp  conf.h  letter.cpp  letter.h  logger.cpp  logger.h  main.cpp  phonotext.cpp  phonotext.h  phonotry.cpp  proccessing.cpp  proccessing.h  qtmainwindow.cpp  qtmainwindow.h  qtmainwindow.ui
